Fixes top spacing on secondary pages, closes #42

--- a/styles/sections/header.scss
+++ b/styles/sections/header.scss
@@ -16,7 +16,7 @@
 
 #shopify-section-header {
   position: sticky;
-  z-index: var(--z-navigayion);
+  z-index: var(--z-navigation);
   top: 0;
 }
 
