--- a/styles/snippets/_page-hero.scss
+++ b/styles/snippets/_page-hero.scss
@@ -5,6 +5,10 @@
   overflow-x: hidden;
   text-align: center;
   width: 100%;
+
+  &:first-child {
+    margin-top: calc(var(--header-height) * -1);
+  }
 }
 
 .page-hero__content {
